<resources>
    <string name="app_name">android_samples</string>
    <string name="main_text">Java Guru</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="preferred_day_of_the_week">Preferred day of the week</string>
    <string name="monday">Monday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="submit">Submit</string>
    <string name="agree_to_terms">Agree to Terms</string>
    <string name="grid_view">Grid view</string>
    <string name="list_view">List View</string>

    <string name="service_unsplash">Unsplash</string>
    <string name="service_giphy">Giphy</string>
    <string name="open_gallery">Open gallery</string>

    <string-array name="streets_array">
        <item>Dzirnavu</item>
        <item>Terbates</item>
        <item>Stabu</item>
        <item>Matisa</item>
        <item>Marijas</item>
        <item>Avotu</item>
        <item>Caka</item>
        <item>Brivibas</item>
    </string-array>

    <string-array name="car_types">
        <item>Truck</item>
        <item>Sedan</item>
        <item>Van</item>
        <item>Coupe</item>
        <item>Wagon</item>
        <item>Convertible</item>
        <item>Crossover</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="info">Info</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="recycler_view">Recycler View</string>

</resources>
