<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <include layout="@layout/header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/first_name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/grey"
                android:inputType="text"
                android:id="@+id/editTestFirstName"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/last_name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/grey"
                android:inputType="text"
                android:id="@+id/editTextLastName"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/age"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/grey"
                android:inputType="number"
                android:id="@+id/editTextAge"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/preferred_day_of_the_week"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preferred_day">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/radioButtonMonday"
                    android:text="@string/monday"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/radioButtonWednesday"
                    android:text="@string/wednesday"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/radioButtonFriday"
                    android:text="@string/friday"/>
            </RadioGroup>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:id="@+id/agreement"
                android:text="Agree to Terms"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:onClick="onSubmitClick"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>