<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--stairs-->
    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="#FF00FF">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="login"
            android:layout_gravity="center"
            android:onClick="openLoginActivity"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:background="#FF00">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="registration"
            android:layout_gravity="center"
            android:onClick="openRegistrationActivity"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#00FF00">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/layout_type">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:id="@+id/gridViewRadioButton"
                android:checked="true"
                android:text="@string/grid_view"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/listViewRadioButton"
                android:text="@string/list_view"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/recyclerViewRadioButton"
                android:text="@string/recycler_view"/>
        </RadioGroup>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/layout_source">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:id="@+id/unsplashRadioButton"
                android:checked="true"
                android:text="@string/service_unsplash"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/giphyRadioButton"
                android:text="@string/service_giphy"/>
        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center_vertical"
            android:onClick="openGallery"
            android:text="@string/open_gallery" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#06ba78">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_text"
            android:background="@android:color/holo_green_dark"
            android:onClick="onButtonClick"/>

        <TextView
            android:id="@+id/main_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/main_text" />
    </RelativeLayout>


    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="#80CAFF">-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/main_text" />-->
    <!--</LinearLayout>-->


    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/main_text" />-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/main_text" />-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/main_text" />-->

</LinearLayout>