<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:src="@drawable/android"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/grey"
                android:inputType="textEmailAddress"
                android:id="@+id/editTestEmail"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/grey"
                android:inputType="textPassword"
                android:id="@+id/editTextPassword"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:onClick="onLoginPress"/>

            <include layout="@layout/header"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>